--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,30 +1,31 @@
     /* Main home*/
-    container_home {
+    .container_home {
         font-family: sans-serif;
         margin: 0;
         display: flex;
     }
+
+
     .container_home {
         display: flex;
         width: 100%;
-        background-color: #eee;
+        background-color: #fffff;
     }
     .left {
         width: 50%;
         padding: 50px;
-        background-color: #f5f5f5;
+        background-color: #fffff;
     }
     .right {
         width: 50%;
         padding: 50px;
         background-color: #ddd;
     }
-    h1 {
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    h2 {
-        margin-bottom: 20px;
+
+    .Details {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .social {
         margin-top: 20px;
@@ -49,16 +50,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 400px;
+        height: 300px;
     }
     .image img {
-        max-width: 100%;
+        max-width: 70%;
     }
 
 /* Satisfaction*/
-main_container_rate {
-  background-color: #black;
-  font-family: Arial, sans-serif;
+.main_container_rate {
+    background-color: #ffffff;
+    font-family: Arial, sans-serif;
 }
 
 .container_rate {
