--- a/templates/Education.html
+++ b/templates/Education.html
@@ -4,25 +4,25 @@
 <head>
     <link rel="stylesheet" href="{% static 'css/edu.css' %}">
 </head>
+{% for post in object_list %}
 <div class="edu">
-
 <div class="container_edu">
   <div class="left">
     <br><br><br>
     <h1>______________________________</h1>
     <ul>
-      <h1 class="title"><strong>{{ edu_info.title }}</strong></h1>
-      <p class="study_period">{{ edu_info.address}} | {{edu_info.website}}</p>
-      <p class="study_period">{{edu_info.subject}} | {{ edu_info.data}} </p>
-      <p>{{ edu_info.body }}</p>
-      <p><a href="{{ edu_info.website }}">{{ edu_info.information }}</a></p>
+      <h1 class="title"><strong>{{ post.title }}</strong></h1>
+      <p class="study_period">{{ post.address}} | {{post.website}}</p>
+      <p class="study_period">{{post.subject}} | {{ post.data}} </p>
+      <p>{{ post.body }}</p>
+      <p><a href="{{ post.website }}">{{ post.information }}</a></p>
     </ul>
   </div>
   <div class="right_edu">
     <br><br><br><br><br>
-    <img src="{{ edu_info.image.url }}" alt="University_Image">
+    <img src="{{ post.image.url }}" alt="University_Image">
   </div>
 </div>
-
 </div>
+{% endfor %}
 {% endblock content %}
