Edu and Job part has been changed, added skills in home

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
             </nav>
             <ul class="footer-socials">
                 <li class="footer-social">
-                    <a href="https://t.me/IbrokhimovMukhammad"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="{{ profile_info.telegram }}"><i class="fa-brands fa-telegram"></i></a>
                 </li>
                 <li class="footer-social">
                     <a href="https://instagram.com/ibroximov_m_"><i class="fa-brands fa-instagram"></i></a>
