--- a/templates/home.html
+++ b/templates/home.html
@@ -25,10 +25,132 @@
         <button class="button">Portfolio</button>
     </div>
 </div>
+
+<!-- About my skills section -->
+<div class="container_skills">
+    <div class="card">
+        <div class="card-image">
+            <i class="fa-solid fa-terminal fa-5x"></i>
+        </div>
+        <h2 class="card-title">Linux</h2>
+        <p class="card-text">
+        Linux is a powerful open-source operating system kernel known for its robustness and flexibility. As a junior Linux enthusiast, I can utilize Linux to set up, manage, and troubleshoot systems, ensuring reliability and security in various environments. My skills include basic administration, scripting, and leveraging Linux tools to enhance system performance and efficiency.
+        </p>
+    </div>
+    <div class="card">
+        <div class="card-image">
+            <i class="fa-solid fa-laptop-code fa-5x"></i>
+        </div>
+        <h2 class="card-title">Python for Backend and Data Analytics</h2>
+        <p class="card-text">
+        Python is a versatile programming language widely used in backend development and data analytics. As a  developer, I can use Python to build scalable web applications and manage server-side logic efficiently. Additionally, I leverage Python’s powerful libraries like Pandas and NumPy to analyze data, generate insights, and drive data-driven decision-making./p>
+        </div>
+    <div class="card">
+        <div class="card-image">
+        <i class="fa-solid fa-code-branch fa-5x"></i></div>
+        <h2 class="card-title">Git & Github</h2>
+        <p class="card-text">
+        Certainly! Here’s a concise version focusing on Git and GitHub:
+        Git is a distributed version control system that tracks changes in source code, while GitHub is a platform that hosts Git repositories and facilitates collaboration. As a junior developer, I can effectively use Git to manage code versions, handle branching, and merge changes. With GitHub, I leverage features like pull requests, issue tracking, and collaborative workflows</div>
+    </div>
+
+<!-- skills sectoin -->
+<div class="sk">
+    <h1>My Skills</h1>
+    <p>I Like To Craft Beautiful And Scalable Web Products and work with their backend, moreover to build desktop apps and ERP systems</p>
+
+    <div class="skill-columns">
+        <div class="left-column">
+            <div class="skill-container">
+                <div class="skill-icon"><i class="fas fa-paint-brush"></i></div>
+                <div class="skill-name">
+                    <h2>Design + Development</h2>
+                    <p>Clean, modern designs - optimized for performance, search engines, and converting users to customers.</p>
+                </div>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill-icon"><i class="fab fa-codepen"></i></div>
+                <div class="skill-name">
+                    <h2>Technology</h2>
+                    <p>Combined all the latest technologies to a progressive website.</p>
+                </div>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill-icon"><i class="fas fa-desktop-alt"></i></div>
+                <div class="skill-name">
+                    <h2>Always Useful</h2>
+                    <p>A robust ERP system and desktop application ensure seamless accessibility and efficiency for all users, regardless of their device.</p>
+                </div>
+            </div>
+        </div>
+        <div class="right-column">
+            <div class="skill-container">
+                <div class="skill-name">HTML5 & CSS3 & Bootstrap</div>
+                <div class="skill-progress">
+                    <div class="progress-bar" style="width: 70%"></div>
+                    <div class="skill-percentage">80%</div>
+                </div>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill-name">Project Management (Jira)</div>
+                <div class="skill-progress">
+                    <div class="progress-bar" style="width: 55%"></div>
+                    <div class="skill-percentage">65%</div>
+                </div>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill-name">Python & Django</div>
+                <div class="skill-progress">
+                    <div class="progress-bar" style="width: 80%"></div>
+                    <div class="skill-percentage">80%</div>
+                </div>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill-name">C</div>
+                <div class="skill-progress">
+                    <div class="progress-bar" style="width: 50%"></div>
+                    <div class="skill-percentage">40%</div>
+                </div>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill-name">OOP & Rest API</div>
+                <div class="skill-progress">
+                    <div class="progress-bar" style="width: 75%"></div>
+                    <div class="skill-percentage">75%</div>
+                </div>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill-name">SQL (My SQL, SQ Lite 3)</div>
+                <div class="skill-progress">
+                    <div class="progress-bar" style="width: 100%"></div>
+                    <div class="skill-percentage">100%</div>
+                </div>
+            </div>
+
+            <div class="skill-container">
+                <div class="skill-name">Linux</div>
+                <div class="skill-progress">
+                    <div class="progress-bar" style="width: 70%"></div>
+                    <div class="skill-percentage">70%</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- rating -->
 <div class="main_container_rate">
     <div class="container_rate">
         <div class="box">
-            <div class="number">2+</div>
+            <div class="number">{{profile_info.year_experience}}</div>
             <div class="text">Years Coding</div>
         </div>
         <div class="box">
