--- a/static/css/home.css
+++ b/static/css/home.css
@@ -86,3 +86,144 @@
   font-size: 18px;
   margin-top: 10px;
 }
+
+/*about skills section*/
+.container_skills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  padding: 20px;
+  width: 300px;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.card-text {
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #333;
+}
+
+.card-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.card-image img {
+  max-width: 100px;
+  max-height: 100px;
+}
+
+/* skills section*/
+.sk {
+    font-family: sans-serif;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.sk h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.sk p {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.skill-columns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.left-column,
+.right-column {
+    flex: 1;
+    min-width: 300px;
+    margin: 10px;
+}
+
+.skill-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+.right-column .skill-container {
+    padding: 15px; /* Reduce padding for right column */
+    transform: scale(0.9); /* Scale down the right column items */
+}
+
+.skill-icon {
+    width: 40px;
+    height: 40px;
+    background-color: #007bff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+.skill-icon i {
+    font-size: 20px;
+    color: #fff;
+}
+
+.skill-name h2,
+.skill-name p {
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+.skill-progress {
+    width: 100%;
+    height: 10px;
+    background-color: #eee;
+    border-radius: 5px;
+    position: relative;
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.progress-bar {
+    height: 100%;
+    background-color: #007bff;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0%;
+    transition: width 0.5s ease;
+}
+
+.skill-percentage {
+    position: absolute;
+    right: 10px;
+    top: -20px;
+    font-size: 12px;
+    color: #007bff;
+}
+
