--- a/static/css/home.css
+++ b/static/css/home.css
@@ -128,6 +128,11 @@
   max-height: 100px;
 }
 
+.card-image i {
+    font-size: 5em;
+    color: #007bff !important; /* Ensure this is present and correct */
+}
+
 /* skills section*/
 .sk {
     font-family: sans-serif;
