--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
 <div class="container_skills">
     <div class="card">
         <div class="card-image">
-            <i class="fa-solid fa-terminal fa-5x"></i>
+            <i class="fa-solid fa-terminal fa-5x font-size: 5em; color: #007bff;"></i>
         </div>
         <h2 class="card-title">Linux</h2>
         <p class="card-text">
