--- a/templates/job.html
+++ b/templates/job.html
@@ -5,27 +5,41 @@
     <link rel="stylesheet" href="{% static 'css/job.css' %}">
 </head>
 <body>
-{% for post in object_list %}
-<div class="container_job">
-  <div class="image">
-    <br><br><br><br><br><br>
-    <img src="{{ post.image.url }}" alt="Restaurant Image" width="100%">
-  </div>
-  <div class="text">
-    <br><br><br>
-    <h1>______________________________</h1>
-    <h1 class="job_title">{{ post.title }}</h1>
-    <p class="job_period"><a href="{{ post.website }}">{{post.website}}</a> | {{ post.data}} | {{post.address}}</p>
-    <ul>
-      <li><p>{{ post.body1 }}</p></li>
-      <li><p>{{ post.body2 }}</p></li>
-      <li><p>{{ post.body3 }}</p></li>
-      <li><p>{{ post.body4 }}</p></li>
-      <li><p>{{ post.body5 }}</p></li>
-      <button class="button"><a href="#">SHOW ALL</a></button>
-    </ul>
-  </div>
-</div>
-</body>
+{% for post in job_info_list %}
+    <div class="container_job">
+        <div class="image">
+            <br><br><br><br><br><br>
+            <img src="{{ post.image.url }}" alt="Restaurant Image" width="100%">
+        </div>
+        <div class="text">
+            <br><br><br>
+            <h1>______________________________</h1>
+            <h1 class="job_title">{{ post.title }}</h1>
+            <p class="job_period"><a href="{{ post.website }}">{{post.website}}</a> | {{ post.data}} | {{post.address}}</p>
+            <ul>
+                <li><p>{{ post.body1 }}</p></li>
+                <li><p>{{ post.body2 }}</p></li>
+                <li><p>{{ post.body3 }}</p></li>
+                <li><p>{{ post.body4 }}</p></li>
+                <li><p>{{ post.body5 }}</p></li>
+                <button class="button"><a href="#">SHOW ALL</a></button>
+            </ul>
+        </div>
+    </div>
 {% endfor %}
+</body>
+<h1 class="text">_______________________________________________________________</h1>
+<h1 class="parttime-title">My Part-Time Jobs</h1>
+<div class="container_parttime">
+    {% for parttime in parttime_info_list %}
+        <div class="card">
+            <div class="card-image">
+                <img src="{{ parttime.image.url }}" alt="Part-Time Image">
+            </div>
+            <h2 class="card-title job-title">{{ parttime.title }}</h2>
+            <p>{{ parttime.company }} | {{parttime.address}} | <a href="{{parttime.website}}">{{parttime.website}}</a></p>
+            <p class="card-text">{{ parttime.information }}</p>
+        </div>
+    {% endfor %}
+</div>
 {% endblock content %}
