--- a/templates/Education.html
+++ b/templates/Education.html
@@ -9,7 +9,7 @@
 <div class="container_edu">
   <div class="left">
     <br><br><br>
-    <h1>______________________________</h1>
+    <h1 class="skills-title">_______________________</h1>
     <ul>
       <h1 class="title"><strong>{{ post.title }}</strong></h1>
       <p class="study_period">{{ post.address}} | {{post.website}}</p>
