--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,7 @@
         <button class="button"><a href="{% url 'contact' %}">EMAIL ME</a></button>
     </div>
     <div class="right">
+        <br><br><br><br>
         <h2>About Me</h2>
         <h3>{{ profile_info.address }}</h3>
         <p>{{ profile_info.profile }}</p>
@@ -43,7 +44,7 @@
         </div>
         <h2 class="card-title">Python for Backend and Data Analytics</h2>
         <p class="card-text">
-        Python is a versatile programming language widely used in backend development and data analytics. As a  developer, I can use Python to build scalable web applications and manage server-side logic efficiently. Additionally, I leverage Python’s powerful libraries like Pandas and NumPy to analyze data, generate insights, and drive data-driven decision-making./p>
+        Python is a versatile programming language widely used in backend development and data analytics. As a  developer, I can use Python to build scalable web applications and manage server-side logic efficiently. Additionally, I leverage Python’s powerful libraries like Pandas and NumPy to analyze data, generate insights, and drive data-driven decision-making.</p>
         </div>
     <div class="card">
         <div class="card-image">
@@ -56,8 +57,10 @@
 
 <!-- skills sectoin -->
 <div class="sk">
-    <h1>My Skills</h1>
-    <p>I Like To Craft Beautiful And Scalable Web Products and work with their backend, moreover to build desktop apps and ERP systems</p>
+    <h1 class="skills-title">My Skills</h1>
+    <p class="skills-description">
+        I Like To Craft Beautiful And Scalable Web Products and work with their backend, moreover to build desktop apps and ERP systems
+    </p>
 
     <div class="skill-columns">
         <div class="left-column">
@@ -91,14 +94,6 @@
                 <div class="skill-progress">
                     <div class="progress-bar" style="width: 70%"></div>
                     <div class="skill-percentage">80%</div>
-                </div>
-            </div>
-
-            <div class="skill-container">
-                <div class="skill-name">Project Management (Jira)</div>
-                <div class="skill-progress">
-                    <div class="progress-bar" style="width: 55%"></div>
-                    <div class="skill-percentage">65%</div>
                 </div>
             </div>
 
