--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
     <div class="container">
     <section class="contact">
         <div class="section-title">
-            Get in touch with us
+            Get in touch with me
         </div>
         <form> {% csrf_token %}
             <div class="textarea">
